--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -6,4 +6,10 @@
   background-color: #2a2c2f;
   font-family: Inter, sans-serif;
   color: white;
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
 }
