--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,13 +1,11 @@
 .cover__overlay {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-decoration: none;
+  grid-row: 1;
+  grid-column: 1;
 }
 
 .cover__overlay::before {
