--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -2,13 +2,9 @@
   font-weight: 400;
   font-size: 24px;
   line-height: 28px;
-  margin: 0 18px 0 0;
   color: white;
   transition: opacity linear 0.25s;
-}
-
-.header__lang-link:last-child {
-  margin: 0;
+  text-decoration: none;
 }
 
 .header__lang-link:hover {
