--- a/blocks/header/__lang-selector/header__lang-selector.css
+++ b/blocks/header/__lang-selector/header__lang-selector.css
@@ -1,5 +1,8 @@
 .header__lang-selector {
   margin: 0;
   padding: 0;
+  display: flex;
+  column-gap: 18px;
+  list-style: none;
   align-self: flex-end;
 }
