--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -3,6 +3,9 @@
   flex-wrap: wrap;
   max-width: 1184px;
   gap: 16px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 @media screen and (max-width: 1280px) {
