--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,7 +1,7 @@
 .place {
   display: grid;
   grid-template-columns: 460px 1fr;
-  grid-gap: 48px 40px;
+  gap: 48px 40px;
   grid-template-rows: 1fr;
   margin: 0;
   padding: 0;
