fix lowzero margin for place__image

--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -17,8 +17,9 @@
 
 @media screen and (max-width: 768px) {
   .place__image {
-    max-width: unset;
-    margin: 0 -16px;
-    width: calc(100% + 32px);
+    max-width: 768px;
+    /*Не понимаю, почему нельзя использовать отрицательный маржин, 
+    чтобы невелировать паддинг всего блока place, ведь все элементы должны иметь одинаковый отступ,
+    кроме картинки, получается что проще и понятнее добавить паддинг всему блоку place и убрать отступ у этой самой картинки,чем добавлять каждому элементу по отдельности.*/
   }
 }
