--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -4,3 +4,9 @@
   height: fit-content;
   align-self: flex-end;
 }
+
+@media screen and (max-width: 768px) {
+  .place__website {
+    padding: 0 16px;
+  }
+}
