--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -3,17 +3,23 @@
   padding: 0 294px 0 0;
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1279px) {
   .intro {
     padding-right: 238px;
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1023px) {
   .intro {
     box-sizing: border-box;
     padding: 0 24px 0 24px;
     max-width: 768px;
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .intro {
+    padding: 0 16px 0 16px;
   }
 }
