--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   padding-bottom: 62.5%;
-  background-image: url(/images/cover-trains.jpg);
+  background-image: url(../../../images/cover-trains.jpg);
   background-size: cover;
   text-decoration: none;
   grid-row: 1;
