--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,12 +1,20 @@
 .places {
-  max-width: 948px;
+  max-width: 984px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   row-gap: 80px;
 }
 
+@media screen and (max-width: 1279px) {
+  .places {
+    max-width: 928px;
+  }
+}
+
 @media screen and (max-width: 1023px) {
   .places {
+    max-width: 720px;
     row-gap: 73px;
   }
 }
