--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -12,6 +12,7 @@
 
 @media screen and (max-width: 767px) {
   .cover__title {
+    margin: 0 0 16px 0;
     font-size: 32px;
     line-height: 35px;
     max-width: 288px;
