--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -10,6 +10,7 @@
 
 @media screen and (max-width: 767px) {
   .lead__title {
+    margin: 48px 0 16px 0;
     max-width: 288px;
     font-size: 40px;
     line-height: 44px;
