--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -53,3 +53,7 @@
 
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup/__close-btn/popup__close-btn.css);
+@import url(../blocks/popup/__image-view/popup__image-view.css);
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__img-caption/popup__img-caption.css);
